Add contributor list and update chapter 01

--- a/01what-is_cn.asciidoc
+++ b/01what-is_cn.asciidoc
@@ -26,31 +26,31 @@
 
 ((("blockchain","components of")))((("Ethereum (generally)","blockchain components")))一般来说，开放的公共区块链的组件包括： 
 
-* 点对点 (P2P) 网络，连接用户并且基于标准化的"gossip"通道传播交易和确认过的交易的区块: pass:[<span class="keep-together">协议</span>]
+* 点对点 (P2P) 网络，基于标准化的“gossip” pass:[<span class="keep-together">协议 </span>]，连接参与者、传播未上链交易集和打包了确认上链交易集的区块集
 * 消息, 以交易的形式存在，表示状态转换
 * 一组共识规则，用于控制构成交易以及促成有效状态转换的因素
 状态机，根据共识规则处理交易
 * 一串经过加密保护的区块，包含所有已验证和接受状态转换的记录
-共识算法，通过强制参与者在共识规则的执行上合作来达到区块链控制去中心化的目的
-基于博弈论的激励机制（如工作量证明花销和区块回馈）保证状态机在公开通道上的经济性 pass:[<span class="keep-together">环境</span>]
-一个或多个由以上部分构成的开源软件（“客户端”）
+* 共识算法，通过强制参与者在共识规则的执行上合作来达到区块链控制去中心化的目的
+* 基于博弈论的合理激励机制（例如，工作量证明成本加上区块奖励），以在开放 pass:[<span class="keep-together">环境 </span>]中经济地保护状态机安全
+* 一个或多个由以上部分构成的开源软件（“客户端”）
 
-这些组件全部或多数通常都集成在单个软件客户端内。举例来说，在比特币((("Bitcoin Core")))((("bitcoind client")))中，参考实现是由比特币核心（Bitcoin Core）开源项目来开发的，实施为 bitcoind 客户端。在以太坊中， 它被称为参考规范（reference specification）((("reference specification")))，而不是参考实现。参考规范是在黄皮书中对系统的数学化描述 (见 <<references>>)。有相当数量的客户端是根据参考规范来写的。
+这些组件全部或多数通常都集成在单个软件客户端内。举例来说，在比特币((("Bitcoin Core")))((("bitcoind client")))中，参考实现是由比特币核心 _Bitcoin Core_ 开源项目来开发的，被实现为 _bitcoind_ 的客户端。在以太坊中，它被称为((("reference specification"))) _参考规范 reference specification_，而不是参考实现。参考规范是在黄皮书中对系统的数学化描述 (见 <<references>>)。有相当数量的客户端是根据参考规范来写的。
 
-过去，我们使用术语“区块链”来代表列出的所有组件，作为对包含上述特征的技术的集合的便捷引用。但是今天有多种多样的具备不同属性的区块链。我们需要限定词来帮助理解有疑问的区块链。比如开放（open），公开（public），全局（global），去中心化（decentralized）, 中立（neutral）和防审查（censorship-resistant），来确定一个“区块链”系统上这些组件能够构成的重要的新特征。
+过去，我们使用术语“区块链”来代表列出的所有组件，作为对包含上述特征的技术的集合的便捷引用。但是今天有多种多样的具备不同属性的区块链。我们需要限定词来帮助理解有疑问的区块链。比如开放 _（open），公开（public），全局（global），去中心化（decentralized）, 中立（neutral）_ 和 _防审查（censorship-resistant）_，来确定一个“区块链”系统上这些组件能够构成的重要的新特征。
 
-并非被命名为区块链的系统都是一样的。当一些人告诉你什么东西是区块链时，你并非得到最终答案；更进一步地，你需要开始问大量的问题来弄清楚当他们使用“区块链”这个词的时候他们实际是指什么。从问上述列表中的组件的说明开始，然后问这个“区块链”是否展示了诸如开放性，公开性等特征。
+并非被命名为区块链的系统都是一样的。当一些人告诉你什么东西是区块链时，你并非得到最终答案；更进一步地，你需要开始问大量的问题来弄清楚当他们使用“区块链”这个词的时候他们实际是指什么。从问上述列表中的组件的说明开始，然后问这个“区块链”是否展示了诸如 _开放性，公开性_ 等特征。
 
 [[ethereum_birth]]
 === 以太坊的诞生
 
-((("Ethereum (generally)","birth of")))伟大的创新总是解决实际问题，以太坊也不例外。 当人们认识到比特币模型的力量，并尝试做加密货币以外的应用时，以太坊被构想出来了。但是开发者面临一个难题： 他们不是需要在比特币之上构建，就是需要开始一条新链。 ((("Bitcoin","limitations of")))在比特币之上构建意味着不得不面对该网络中那些有意的限制， 并且寻找解决办法。交易类型、数据类型和数据存储大小等一系列限制看上去限制了比特币之上能够运行的应用程序；其他一切都需要额外的链下层，这马上削减了使用公共区块连的优势。对于那些保持在链上且需要更多自由和弹性的项目来说，一个新的区块链是唯一的选择。但这意味着大量的工作：自力完成所有基础设施，耗尽心神的测试等等
+((("Ethereum (generally)","birth of")))伟大的创新总是解决实际问题，以太坊也不例外。 当人们认识到比特币模型的力量，并尝试做加密货币以外的应用时，以太坊被构想出来了。但是开发者面临一个难题： 他们不是需要在比特币之上构建，就是需要开始一条新链。 ((("Bitcoin","limitations of")))在比特币之上构建意味着不得不面对该网络中那些有意的限制， 并且寻找解决办法。交易类型、数据类型和数据存储大小等一系列限制看上去限制了比特币之上能够运行的应用程序；其他一切都需要额外的链下层，这马上削减了使用公有区块链的优势。对于那些保持在链上且需要更多自由和弹性的项目来说，一个新的区块链是唯一的选择。但这意味着大量的工作：自力完成所有基础设施，耗尽心神的测试等等。
 
-((("Buterin, Vitalik","and birth of Ethereum")))临近2013年底时， Vitalik Buterin，一个年轻的程序员和比特币拥护者，开始思考对比特币和万事达币（一种扩展自比特币的提供初级智慧合约的中继协议）的进一步扩展。那年10月，Vitalik给大师币团队提供了一种更通用的方法，允许弹性的和可脚本化的合约 (但并非图灵完备的)来取代大师币特殊的合约语言。尽管大师币团队印象深刻，但是这个提议是一个过大的改变，不符合他们的开发路线图。
+((("Buterin, Vitalik","and birth of Ethereum")))临近2013年底时， Vitalik Buterin，一个年轻的程序员和比特币拥护者，开始思考对 Bitcoin 和 Mastercoin （一种扩展自比特币的提供初级智慧合约的中继协议）的进一步扩展。那年10月，Vitalik 给 Mastercoin 团队提供了一种更通用的方法，允许弹性的和可脚本化的合约(但并非图灵完备的)来取代 Mastercoin 殊的合约语言。尽管 Mastercoin 团队印象深刻，但是这个提议是一个过大的改变，不符合他们的开发路线图。
 
 2013年12月，Vitalik开始分享一份指明了以太坊的创意的白皮书：一个图灵完备的，一般用途的区块链。有一些人看到了这份早期草稿并且提供了反馈，帮助Vitalik推进了这个提议。
 
-本书的两个作者都收到了这份白皮书的早期草稿，并且提了意见。Andreas M. Antonopoulos 对这个想法感兴趣并询问了 Vitalik关于使用分离区块链来增强智能合约执行的共识规则，和图灵完备语言的隐含意义。Andreas继续带着极大的兴趣跟踪以太坊的进程，不过因为他正在撰写《Mastering Bitcoid》的早期阶段，直到很久之后才直接参与以太坊。Gavin Wood博士却是接触Vitalik并帮助他C++编程技巧的第一批人士之一。Gavin成为以太坊的共同创始人、共同设计者和CTO。
+本书的两个作者都收到了这份白皮书的早期草稿，并且提了意见。Andreas M. Antonopoulos 对这个想法感兴趣并询问了 Vitalik关于使用分离区块链来增强智能合约执行的共识规则，和图灵完备语言的隐含意义。Andreas继续带着极大的兴趣跟踪以太坊的进程，不过因为他正在撰写 _《精通比特币》_ 的早期阶段，直到很久之后才直接参与以太坊。Gavin Wood博士却是接触Vitalik的第一批人士之一并以他C++编程技巧提供帮助。Gavin成为以太坊的共同创始人、共同设计者和CTO。
 
 正如Vitalik在他的 http://bit.ly/2T2t6zs["Ethereum Prehistory" post]所述: 
 
